docs: adjust apispec.yaml to match API functionality
adjust sql queries to show data in correct order
